# waechter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  todo.md
.gitea/workflows/: build.yml
.github/: COPILOT_GUIDELINES.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: configure-release-ubuntu.sh  create-release-tarball.sh  generate-release-notes.sh  install-dependencies.sh
.github/workflows/: build-emscripten.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  codeql.yml  deploy-docs.yml  deploy-emscripten.yml  release.yml  test-release.yml
Meta/: Binary.py  BuiltinProtocolDB.json  Dockerfile  FlagConv.py  Licenses.cmake  PKGBUILD  ProtocolDbGenerator.py  Waechter.desktop  build-shell.sh  header.psd  waechter.ini  waechterd.ini  waechterd.service
Meta/Assets/: AUTHORS
Meta/Database/: CurrentState.sql  Database.sqlite  Schema.hpp  sqlite2cpp.py
Meta/I18n/: README.md  de_DE.json  en_US.json
Meta/Icons/: MakeAtlas.py
Meta/Package/: .install  PKGBUILD  postinst  postrm  prerm  shell.html  waechter.desktop  waechter.sysusers  waechterd.ini  waechterd.service
Meta/Scripts/: Binary.py  Dockerfile  FlagConv.py  ProtocolDbGenerator.py  build-shell.sh
Meta/Test scripts/: SockMaker.py  TCPAccept.py  UDPSendMsgReceiveMsg.py  UDPSendToReceiveFrom.py  UdpSender.py  (+1 more)
Meta/Web/: .gitignore  (+3 more)
Source/: CMakeLists.txt  Waechter.cpp  main.cpp  old-main.cpp
Source/Daemon/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  DaemonConfig.cpp  DaemonConfig.hpp  EbpfData.cpp  EbpfData.hpp  EbpfMap.hpp  EbpfObj.cpp  EbpfObj.hpp  EbpfRingBuffer.hpp  MemoryUsage.cpp  MemoryUsage.hpp  WaechterEbpf.cpp  WaechterEbpf.hpp  WaechterEpf.cpp  WaechterEpf.hpp  Waechterd.cpp  old-main.cpp
Source/Daemon/Communication/: CMakeLists.txt  ClientUnixSocket.hpp  ClientWebSocket.cpp  ClientWebSocket.hpp  DaemonClient.cpp  DaemonClient.hpp  DaemonSocket.cpp  DaemonSocket.hpp  DaemonUnixSocket.cpp  DaemonUnixSocket.hpp  DaemonWebSocket.cpp  DaemonWebSocket.hpp  IClientSocket.hpp  IServerSocket.hpp
Source/Daemon/Data/: AppIconAtlasBuilder.cpp  AppIconAtlasBuilder.hpp  ApplicationMap.cpp  ApplicationMap.hpp  CMakeLists.txt  ConnectionHistory.cpp  ConnectionHistory.hpp  Counters.cpp  Counters.hpp  IP2Asn.cpp  IP2Asn.hpp  IconResolver.cpp  IconResolver.hpp  LibCurl.cpp  LibCurl.hpp  MapUpdate.cpp  MapUpdate.hpp  NetworkEvents.hpp  ProcessMap.cpp  ProcessMap.hpp  SocketInfo.cpp  SocketInfo.hpp  SystemMap.cpp  SystemMap.hpp  TrafficCounter.cpp  TrafficCounter.hpp  TrafficItem.hpp
Source/Daemon/Db/: CMakeLists.txt  DbManager.cpp  DbManager.hpp  DbMigrations.hpp  IDbConnection.hpp  Schema.hpp  SqliteConnection.cpp  SqliteConnection.hpp  StatsManager.cpp  StatsManager.hpp
Source/Daemon/EBPF/: CMakeLists.txt  EBPFAccept.h  EBPFBind.h  EBPFConnect.h  EBPFInternal.h  EBPFLifetime.h  EBPFRules.h  EBPFTraffic.c  EBPFTraffic.h  EBPFUdp.h  EbpfData.cpp  EbpfData.hpp  EbpfMap.hpp  EbpfObj.cpp  EbpfObj.hpp  EbpfRingBuffer.hpp  WaechterEBPF-old.c  WaechterEBPF.c  WaechterEbpf.cpp  WaechterEbpf.hpp  detach.sh
Source/Daemon/Net/: CMakeLists.txt  IPLink.cpp  IPLink.hpp  NetLink.cpp  NetLink.hpp  PacketParser.cpp  PacketParser.hpp  Resolver.cpp  Resolver.hpp  SocketStateParser.cpp  SocketStateParser.hpp
Source/Daemon/Net/IPLinkProc/: CMakeLists.txt  IPLinkProc.cpp
Source/Daemon/Rules/: CMakeLists.txt  RuleManager.cpp  RuleManager.hpp
Source/EBPF/: CMakeLists.txt  EBPFAccept.h  EBPFBind.h  EBPFConnect.h  EBPFInternal.h  EBPFLifetime.h  EBPFTraffic.h  EBPFUdp.h  WaechterEBPF.c
Source/Gui/: AboutDialog.cpp  AboutDialog.hpp  AppIconAtlas.cpp  AppIconAtlas.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientRuleManager.cpp  ClientRuleManager.hpp  GlfwWindow.cpp  GlfwWindow.hpp  MainWindow.cpp  MainWindow.hpp  WClient.cpp  WClient.hpp  Waechter.cpp  waechter.rc.in
Source/Gui/Communication/: CMakeLists.txt  EmscriptenSocketSource.cpp  EmscriptenSocketSource.hpp  IDaemonSocket.hpp  TrafficTree.cpp  TrafficTree.hpp  UnixSocketSource.cpp  UnixSocketSource.hpp  WebSocketSource.cpp  WebSocketSource.hpp
Source/Gui/Icons/: CMakeLists.txt  IconAtlas.cpp  IconAtlas.hpp
Source/Gui/Util/: BuiltinProtocolDB.cpp  CMakeLists.txt  DbusUtil.cpp  DbusUtil.hpp  FlagAtlas.cpp  FlagAtlas.hpp  I18n.cpp  I18n.hpp  IP2Asn.cpp  IP2Asn.hpp  ImGuiUtil.hpp  ImageUtil.cpp  ImageUtil.hpp  IpQueryIntegration.cpp  IpQueryIntegration.hpp  LibCurl.cpp  LibCurl.hpp  ProtocolDB.cpp  ProtocolDB.hpp  RuleWidget.cpp  RuleWidget.hpp  Settings.cpp  Settings.hpp  SysUtil.cpp  SysUtil.hpp  TrayIcon.cpp  TrayIcon.hpp
Source/Gui/Util/Keylogic/: CMakeLists.txt  README.md  keylogic.c  validate.h
Source/Gui/Windows/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  ConnectionHistoryWindow.cpp  ConnectionHistoryWindow.hpp  DetailsWindow.cpp  DetailsWindow.hpp  GlfwWindow.cpp  GlfwWindow.hpp  LogWindow.cpp  LogWindow.hpp  MainWindow.cpp  MainWindow.hpp  MemoryUsageWindow.cpp  MemoryUsageWindow.hpp  NetworkGraphWindow.cpp  NetworkGraphWindow.hpp  RegisterDialog.cpp  RegisterDialog.hpp  SdlWindow.cpp  SdlWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp  SetupWindow.cpp  SetupWindow.hpp  StatWindow.cpp  StatWindow.hpp  TrafficTree.cpp  TrafficTree.hpp
Source/Util/: Buffer.hpp  CMakeLists.txt  ClientSocket.cpp  EBPFCommon.h  ErrnoUtil.hpp  Filesystem.hpp  Format.hpp  IPAddress.hpp  IPLinkMsg.hpp  Json.hpp  MemoryStats.hpp  Messages.hpp  NetworkInterface.cpp  NetworkInterface.h  NetworkInterface.hpp  Promise.hpp  Random.hpp  SignalHandler.cpp  SignalHandler.hpp  Singleton.hpp  Socket.hpp  Time.cpp  Time.hpp  TrafficCounter.hpp  Types.hpp
Source/Util/Data/: AppIconAtlasData.hpp  ApplicationItem.hpp  CMakeLists.txt  ConnectionHistoryUpdate.hpp  FilterItem.hpp  ProcessItem.hpp  Protocol.hpp  ResolveData.hpp  Rule.hpp  RuleUpdate.hpp  SocketItem.hpp  SocketStateParser.cpp  SocketStateParser.hpp  Stats.hpp  SystemItem.hpp  TrafficItem.hpp  TrafficTreeUpdate.hpp
Source/Util/IP2Asn/: CMakeLists.txt  IP2AsnDB.cpp  IP2AsnDB.hpp
ebpf/: BUILD.md  attach.sh  traffic_limit_kern.c  waechter_bpf.c
(+43 files in other folders)
