target_sources(waechter
        PRIVATE
        FlagAtlas.cpp
        FlagAtlas.hpp
        LibCurl.cpp
        LibCurl.hpp
        Settings.cpp
        Settings.hpp
        RuleWidget.cpp
        RuleWidget.hpp
        ProtocolDB.cpp
        ProtocolDB.hpp
        ImageUtil.cpp
        ImageUtil.hpp
        IP2Asn.cpp
        IP2Asn.hpp
        DbusUtil.cpp
        DbusUtil.hpp
        I18n.cpp
        I18n.hpp
)

add_subdirectory(Keylogic)